app/styles/main.scss
  
/*THEMATICE CHOICES*/
  /*Color Pallete*/
  $pantone138C: #F3930D; /*orange*/
  $pantone171C: #EF7540; /*salmon*/
  $pantone412C: #190E00; /*dark-black*/
  $pantone395C: #F4ED35; /*yellow*/
  $pantone601C: #FDF8A7; /*meringue*/
  $pantoneBlack7: #474139; /*grey*/
  $white: #ffffff; /*not in style-guide, but on website*/


  /*Fonts*/
  @import url(https://fonts.googleapis.com/css?family=Rajdhani:400,700,300);

  $main : 'Rajdhani', sans-serif;

  $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";

  // bower:scss
  @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
  // endbower

  /* FOR IE10 Users */
  .browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
  }

/*PAGE CONTENT*/
  body{
    font-family: $main;
    background-color: $pantoneBlack7;
    color: $white;
  }

  a{
    text-decoration: none;
    color: white;
  }

  a:hover{
    text-decoration: none;
    color: $pantone395C;
  }

  /* NAVBAR */
  .header {
    border-bottom: 1px solid #e5e5e5;

    /* Make the masthead heading the same height as the navigation */
    h3 {
      margin-top: 0;
      margin-bottom: 0;
      line-height: 40px;
      padding-bottom: 19px;
    }
  }

  .navbar {

  }

  .navbar-default {
    background-color: $pantone412C;
    border-color: $pantoneBlack7;

    .navbar-brand {
      height: inherit;
      img{
        height: 50px;
      }
    }
  }


  /*USER INPUT*/
  .userFormNavBar {
    text-decoration: none;
    font-family: $main;
    text-align: center;
    }


  /*APP CONTENT*/
  .appFormNavBar {
    text-decoration: none;
    font-family: $main;
    text-align: center;
    }

  .appContent {
    background-color: black;
    }


  /* Custom page footer */
  .footer {
    text-align: center;
    padding-top: 19px;
    color: $white;
  }

/* Responsive: Portrait tablets and up */
  @media screen and (min-width: 768px) {
    .container {
      max-width: 730px;
    }

    /* Space out the masthead */
    .header {
      margin-bottom: 30px;
    }
  }

  .navbar navbar-default {
    background-color: $pantoneBlack7;
  }

